--- a/analytics.yaml
+++ b/analytics.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Analytics
-  version: '0.1'
+  version: '0.2'
   description: |-
     The Analytics API provides endpoints for querying current state, historical trends and summarisations of an environment and interactions within it.
 
@@ -16,7 +16,7 @@ servers:
         description: Host where place is deployed.
     description: UAT infrastructure
 paths:
-  '/location/{id}/presence':
+  '/location/{id}/occupancy':
     parameters:
       - schema:
           type: string
@@ -25,9 +25,7 @@ paths:
         required: true
         description: Location ID to query
     get:
-      summary: Location Presence
-      tags:
-        - presence
+      summary: Location Occupancy
       responses:
         '200':
           description: ''
@@ -41,24 +39,23 @@ paths:
                 properties:
                   value:
                     type: number
-                    description: Predicted presence at the requested time
-                    enum:
-                      - 0
-                      - 1
+                    minimum: 0
+                    maximum: 1
                   confidence:
                     type: number
                     minimum: 0
                     maximum: 1
                 required:
                   - value
-              examples:
-                Example:
-                  value:
-                    value: 1
+                  - confidence
+              examples: {}
         '204':
           description: No event data is available for the time requested. This will occur if `at` is prior to any data being available.
       operationId: get-location-id-presence
-      description: Provides presence insights for a location.
+      description: |-
+        Provides occupancy insights for a location.
+
+        Occupancy is defined as usage of a location. This incudes rooms, desks, lockers and other assets. At any point in time it is always either `0.0` (available) or `1.0` (in use), however the confidence of this may vary. When querying a time range, the ratio of in use to available time during the window is returned.
       security:
         - API Key: []
       parameters:
@@ -67,23 +64,19 @@ paths:
           in: query
           name: at
           description: A point in time (RFC3339) to query.
-          required: true
-        - schema:
-            type: string
-            enum:
-              - daily
-              - weekly
-              - fortnightly
-              - monthly
-              - yearly
-          in: query
-          name: window
-          description: Seasonality window to use for predictions.
         - schema:
             type: string
           in: query
-          name: from
-          description: A source type (e.g. `camera`). If specified only events from this type will be used.
+          name: start
+          description: An RFC3339 timestamp with the start of the query range
+        - schema:
+            type: string
+          in: query
+          name: stop
+          description: An RFC3339 timestamp with the end of the query range
+      tags:
+        - occupancy
+        - location
   '/location/{id}/state/{event}':
     parameters:
       - schema:
@@ -111,10 +104,10 @@ paths:
                 properties:
                   value:
                     type: number
-        '204':
-          description: No data availble for the requested time.
         '400':
           description: Bad Request. Returned if `at` is in the future.
+        '404':
+          description: No data availble for the requested time.
       tags:
         - state
         - location
@@ -128,7 +121,7 @@ paths:
         - schema:
             type: string
           in: query
-          name: from
+          name: src
           description: Filter to a specific source type.
   '/location/{id}/utilisation':
     parameters:
@@ -145,7 +138,7 @@ paths:
         - location
       responses:
         '200':
-          description: OK
+          description: ''
           content:
             application/json:
               schema:
@@ -155,26 +148,37 @@ paths:
                     type: number
                     minimum: 0
                     maximum: 1
-                    description: Utilization level over the time window
+                  confidence:
+                    type: number
+                    minimum: 0
+                    maximum: 1
                 required:
                   - value
+                  - confidence
+                x-examples: {}
+                title: aggregate
+              examples: {}
+          headers: {}
       operationId: get-location-id-utilization
       description: |-
         Utilization insights for a location.
 
-        This combines together multiple signals (presence, people_count, in_use etc) to provide utilization metrics.
+        Utilization provides a measure of capacity of a location to its detected usage.
       parameters:
         - schema:
             type: string
           in: query
+          name: at
+          description: A point in time (RFC3339) to query.
+        - schema:
+            type: string
+          in: query
           name: start
-          required: true
           description: An RFC3339 timestamp with the start of the query range
         - schema:
             type: string
           in: query
           name: stop
-          required: true
           description: An RFC3339 timestamp with the end of the query range
 components:
   schemas:
@@ -204,7 +208,7 @@ tags:
     description: Organistaion queries
   - name: state
     description: Queries providing historical state.
-  - name: presence
-    description: Presence insights
+  - name: occupancy
+    description: Occupancy insights
   - name: utilisation
     description: Utilisation insights
