--- a/metadata.yaml
+++ b/metadata.yaml
@@ -174,6 +174,7 @@ paths:
       operationId: get-level-id-locations
       security:
         - X-API-Key: []
+      description: Retrieve locations within a level.
 components:
   schemas:
     location:
